--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -22,7 +22,7 @@ h1, h2 {
 .top-hero-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: url('dartsbank_top.jpg');
+  background-image: image-url("dartsbank_top.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
