--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
           </div>
           <div class="form-group">
             <%= f.label :password %>
-            <%= f.password_field :password, placeholder: '英数字使用英語は大文字小文字を併用してください', class: 'form-control'%>
+            <%= f.password_field :password, placeholder: '8文字以上英数字使用英語は大文字小文字を併用', class: 'form-control'%>
           </div>
           <div class="form-group">
             <%= f.label :password_confirmation %>
